testing/macro-tests/tests/ui/db_default_removed.stderr
error: Unknown field: `db_default`. Did you mean `default`?
  --> tests/ui/db_default_removed.rs:23:13
   |
23 |             db_default = 1u16
   |             ^^^^^^^^^^
